force-app/main/default/objects/HR_Job_Requisition__c/HR_Job_Requisition__c.object-meta.xml
<CustomObject>
    <description>Used to manage job requisitions.  Included in the App Cloud Harbor Cruise package.</description>
    <label>Job Requisition</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>