force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>