force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Contact__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The HR contact for this job requisition.</description>
    <inlineHelpText>The HR contact for this job requisition.</inlineHelpText>
    <label>HR Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>