force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>HR_Days_Open__c</fullName>
    <formula>IF( ISNULL( HR_Close_Date__c ) ,
TODAY() - HR_Rec_Open__c ,
HR_Close_Date__c - HR_Rec_Open__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>