force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Description__c.field-meta.xml
<CustomField>
    <fullName>HR_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>