force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>HR_Functional_Area__c</fullName>
    <label>Functional Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Retail Operations</fullName>
            </value>
            <value>
                <fullName>Warehousing</fullName>
            </value>
            <value>
                <fullName>Hardware Engineering</fullName>
            </value>
            <value>
                <fullName>Software Engineering</fullName>
            </value>
            <value>
                <fullName>Product Management</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>