force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Hire_by_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_Hire_by_Date__c</fullName>
    <defaultValue>Today()+60</defaultValue>
    <label>Hire by Date</label>
    <type>Date</type>
</CustomField>