force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hiring manager for this job requisition.</description>
    <inlineHelpText>The hiring manager for this job requisition.</inlineHelpText>
    <label>Hiring Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>HR_Job_Requisitions_Hiring_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>