force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Location__c.field-meta.xml
<CustomField>
    <fullName>HR_Location__c</fullName>
    <label>Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>