force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Master_Job_Definition1__c.field-meta.xml
<CustomField>
    <fullName>HR_Master_Job_Definition1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Job Definition</label>
    <referenceTo>Jobs__c</referenceTo>
    <relationshipLabel>Job Requisitions</relationshipLabel>
    <relationshipName>Job_Requisitions</relationshipName>
    <type>Lookup</type>
</CustomField>