force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Master_Job_Definition__c.field-meta.xml
<CustomField>
    <fullName>HR_Master_Job_Definition__c</fullName>
    <label>Master Job Definition</label>
    <length>30</length>
    <referenceTo>Jobs__x</referenceTo>
    <relationshipLabel>Job Requisitions</relationshipLabel>
    <relationshipName>Job_Requisitions</relationshipName>
    <type>ExternalLookup</type>
</CustomField>