force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Max_Pay__c.field-meta.xml
<CustomField>
    <fullName>HR_Max_Pay__c</fullName>
    <label>Max Pay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>