force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Rec_Open__c.field-meta.xml
<CustomField>
    <fullName>HR_Rec_Open__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Rec Open Date</label>
    <type>Date</type>
</CustomField>