force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Status__c.field-meta.xml
<CustomField>
    <fullName>HR_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Needs Approval</fullName>
            </value>
            <value>
                <fullName>Open - Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>