force-app/main/default/objects/HR_Job_Requisition__c/fields/HR_Travel_Required__c.field-meta.xml
<CustomField>
    <fullName>HR_Travel_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Required</label>
    <type>Checkbox</type>
</CustomField>