force-app/main/default/objects/HR_Job_Requisition__c/fields/Position_ID__c.field-meta.xml
<CustomField>
    <fullName>Position_ID__c</fullName>
    <externalId>true</externalId>
    <label>Position ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>